# PartnerManager

./: COPYRIGHT  Cargo.toml  README.md
migrations/2023-11-04-023215_initial_settings/: down.sql  up.sql
migrations/2024-01-24-235002_self_representatives/: down.sql  up.sql
migrations/2024-11-28-185523_fix_self_reps_constraint/: down.sql  up.sql
src/: command_types.rs  config.rs  database.rs  handler.rs  main.rs  models.rs  schema.rs  standard_replies.rs
src/commands/: help.rs  mod.rs  settings.rs  setup.rs
src/commands/partner_categories/: add.rs  list.rs  mod.rs  remove.rs
src/commands/partner_embed/: build_new.rs  edit_category.rs  edit_content.rs  mod.rs  remove.rs  reorder.rs
src/commands/partners/: add.rs  add_rep.rs  add_self_rep.rs  list_reps.rs  list_self_reps.rs  mod.rs  remove.rs  remove_rep.rs  remove_self_rep.rs  set_category.rs  set_name.rs  user_rep_list.rs
src/commands/settings/: embed_channel.rs  mod.rs  partner_role.rs
src/sync/: embed.rs  mod.rs  role.rs
src/utils/: autocomplete.rs  mod.rs  pagination.rs  setup_check.rs
