[package]
name = "partner-management"
version = "1.1.0"
edition = "2021"

[dependencies]
cuid2 = "0.1.2"
diesel = { version = "2.1.4", features = ["postgres"] }
diesel_migrations = "2.1.0"
futures = "0.3.30"
knuffel = "3.2.0"
miette = { version = "5.10.0", features = ["fancy"] }

[dependencies.serenity]
version = "0.12.1"
default-features = false
features = [
	"builder",
	"cache",
	"client",
	"collector",
	"gateway",
	"model",
	"rustls_backend",
	"temp_cache"
]

[dependencies.tokio]
version = "1.36.0"
features = [
	"fs",
	"macros",
	"net",
	"rt-multi-thread",
	"sync"
]