[package]
name = "partner-management"
version = "1.1.5"
edition = "2021"

[dependencies]
cuid2 = "0.1.3"
diesel = { version = "2.2.6", features = ["postgres"] }
diesel_migrations = "2.2.0"
futures = "0.3.31"
knuffel = "3.2.0"
miette = { version = "5.10.0", features = ["fancy"] }

[dependencies.serenity]
version = "0.12.4"
default-features = false
features = [
	"builder",
	"cache",
	"client",
	"collector",
	"gateway",
	"model",
	"rustls_backend",
	"temp_cache"
]

[dependencies.tokio]
version = "1.43.0"
features = [
	"fs",
	"macros",
	"net",
	"rt-multi-thread",
	"sync"
]